Refractor sonara